<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <group android:checkableBehavior="single">

            <item android:id="@+id/nav_menu_item_dashboard"
                android:icon="@drawable/dashboard"
                android:title="Dashboard"/>
            <item android:id="@+id/nav_menu_item_profile"
                android:icon="@drawable/profile"
                android:title="@string/profile"/>
            <item android:id="@+id/nav_menu_item_create_pr"
                android:icon="@drawable/create_order"
                android:title="@string/create_pr"/>
            <item android:id="@+id/nav_menu_item_requisite_orders"
                android:icon="@drawable/orders"
                android:title="@string/requisite_orders"/>
        </group>

</menu>